--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="piano-bench"></div>
-    <script src="out/main.js" type="text/javascript"></script>
+    <script src="cljs-out/main.js" type="text/javascript"></script>
   </body>
 </html>
