--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <style>
+     body {
+       height: 100%;
+       width: 100%;
+       margin: -20px 0 0 0;
+     }
+    </style>
   </head>
   <body>
     <div id="piano-bench"></div>
