Fixing connection from page to figwheel when using the new 'dev' build profile

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <div id="piano-bench"></div>
-    <script src="cljs-out/main.js" type="text/javascript"></script>
+    <script src="cljs-out/dev-main.js" type="text/javascript"></script>
   </body>
 </html>
